--- a/qof.pc.in
+++ b/qof.pc.in
@@ -4,7 +4,6 @@ exec_prefix=@exec_prefix@
 libdir=@libdir@
 includedir=@includedir@
 xmldir=@QSF_SCHEMA_DIR@
-gda_libs=@GDA_PKG_LIB@
 qof_sql_libs=@SQL_PKG_LIB@
 
 Name: QOF
@@ -12,5 +11,5 @@ Description: QOF Query Object Framework Library.
 Version: @VERSION@
 Requires: glib-2.0
 Libs: -L${libdir} -lqof
-Libs.private: -lm ${gda_libs} ${qof_sql_libs}
+Libs.private: -lm ${qof_sql_libs}
 Cflags: -I${includedir}/qof
